testsuite/bsc.typechecker/kind/mismatch/ProvisoProvisoMismatch_TopLevel.bsv
module mkProvisoProvisoMismatch_TopLevel(Reg#(t))
   provisos(Bits#(szt, j), Bits#(t, szt));
endmodule
